k8s/overlays/staging/apps/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wemeetatplace
spec:
  ingressClassName: nginx
  rules:
    - host: staging.wemeetatplace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wemeetatplace-server
                port:
                  number: 80
